== 2.0.0.alpha.7 / 2012-04-19
* fix for Neo4j::Config bug - did not work from rails to set the db location, closes #191
* has_n and has_one method generate class method returning the name of the relationship as a Symbol, closes #170
* Raise exception if trying to index boolean property, closes #180
* Made start_node= and end_node= protected closes 186
* Support for things like @dungeon.monsters.dangerous { |m| m[:weapon?] == 'sword' } closes #181

== 2.0.0.alpha.6 / 2012-04-15
* Complete rewrite and smaller change of API + lots of refactoring and better RSpecs
* Moved code to the neo4j-core and neo4j-wrapper gems
* Changed API - index properties using the Neo4j::Rails::Model (property :name, :index => :exact)
* Changed API - rel_type always returns a Symbol
* Changed API - #rels and #rel first parameter is always :outgoing, :incoming or :both
* Cypher DSL support, see neo4j-core
* Made the Lucene indexing more flexible
* Renamed size methods to count since it does simply count all the relationships (e.g. Person.all.count)
* Modularization - e.g. make it possible to create your own wrapper
* Added builder method for has_one relationships (just like ActiveRecord build_best_friend)

== 2.0.0.alpha.5 / 2012-03-27
* Fix for HA/cluster bug [#173]
* Upgrade to neo4j-community jars 1.7.0.alpha.1
* Fix for rails 3.2 [#131]
* Fix for BatchInserter bug, [#139]
* Added rake task for upgrading [#116]
* Added scripts for upgrading database [#116]

== 2.0.0.alpha.4 / 2012-01-17
* Fix node and rel enumerable for JRuby 1.9, Dmytrii Nagirniak
* Remove the will_paginate and move it to a separate gem Dmytrii Nagirniak, [#129][#132]
* Use type converter to determine how to handle multi-param attributes, Dmyitrii Nagirniak [#97]
* Set default storage_path in Rails to db [#96]
* Fix numeric Converter with nils and Float converter, Dmytrii Nagirniak
* Fix Neo4j::Rails::Model.find incorrect behavior with negative numbers, Dmytrii Nagirniak [#101]