@@ -17,7 +17,7 @@ require 'neo4j-wrapper'
 
 require 'neo4j/type_converters/serialize_converter'
 require 'neo4j/rails/rails'
-
+require 'neo4j/paginated'
 
 require 'orm_adapter/adapters/neo4j'
 Dir["#{File.dirname(__FILE__)}/tasks/**/*.rake"].each { |ext| load ext } if defined?(Rake) && respond_to?(:namespace)
